--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     env: python
     buildCommand: ""
     startCommand: "python money_net.py"
-services:
+
   - type: cron
     name: keep-alive-cron
-    schedule: "*/10 * * * *"  # 每 10 分鐘執行一次
+    schedule: "*/10 * * * *"
     env: python
     plan: free
     buildCommand: ""
